[package]
name = "rustreet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.9", features = ["blocking"] }
clap = {version = "3.0.14", features = ["derive"]}
json = "0.12.4"