[package]
name = "rustreet"
version = "0.1.0"
edition = "2021"
authors = ["myselfleo <myselfleo@outlook.fr>"]
license = "GNU GPLv3"
description = "Display map in your terminal!"
readme = "README.md"
homepage = "https://github.com/MyselfLeo/rustreet"
repository = "https://github.com/MyselfLeo/rustreet"
keywords = ["cli", "map"]
categories = ["command-line-utilities"]


[dependencies]
reqwest = {version = "0.11.9", features = ["blocking"] }
clap = {version = "3.0.14", features = ["derive"]}
json = "0.12.4"